--- a/Julfiker_Portfolio/Views/Shared/_Layout.cshtml
+++ b/Julfiker_Portfolio/Views/Shared/_Layout.cshtml
@@ -61,7 +61,10 @@
         <!-- Navbar -->
         <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top glass-navbar">
             <div class="container-fluid">
-                <a class="navbar-brand fw-bold text-warning" asp-controller="Home" asp-action="Index">MJAJ</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+    <img src="~/images/jewel-logo.jpg" alt="Logo" style="height:40px; width:auto;" />
+</a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
