--- a/Julfiker_Portfolio/Views/Shared/_Layout.cshtml
+++ b/Julfiker_Portfolio/Views/Shared/_Layout.cshtml
@@ -59,11 +59,11 @@
     <div class="wrapper">
 
         <!-- Navbar -->
-        <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top glass-navbar">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
-    <img src="~/images/jewel-logo.jpg" alt="Logo" style="height:40px; width:auto;" />
+       <a class="navbar-brand d-flex align-items-center" asp-controller="Home" asp-action="Index">
+    <img src="~/images/mja-logo.png" alt="MJA Logo"
+         style="height:35px; width:auto;" asp-append-version="true" />
 </a>
+
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
