--- a/Julfiker_Portfolio/Views/Shared/_Layout.cshtml
+++ b/Julfiker_Portfolio/Views/Shared/_Layout.cshtml
@@ -59,11 +59,7 @@
     <div class="wrapper">
 
         <!-- Navbar -->
-       <a class="navbar-brand d-flex align-items-center" asp-controller="Home" asp-action="Index">
-    <img src="~/images/mja-logo.png" alt="MJA Logo"
-         style="height:35px; width:auto;" asp-append-version="true" />
-</a>
-
+       <a class="navbar-brand fw-bold text-warning" asp-controller="Home" asp-action="Index">MJAJ</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
